kubernetes_task/Part 2 and 3/mongodb/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongodb-vol
      volumes:
        - name: mongodb-vol
          persistentVolumeClaim:
            claimName: mongodb-pvc
      tolerations:
        - key: "app"
          operator: "Equal"
          value: "mongo"
          effect: "NoSchedule"
