kubernetes_task/Part 2 and 3/mongodb/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongo-db
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
