kubernetes_task/Part 2 and 3/mongodb/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-express
  namespace: mongo-db
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: mongo-express
    ports:
    - protocol: TCP
      port: 27017
